# ROS2_project-turtle-robot-control-

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_interfaces/share/robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_interfaces/share/robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robot_interfacesConfig-version.cmake  robot_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/turtle_bringup/share/turtle_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh
install/turtle_project/lib/turtle_project/: turtle_controller  turtle_spawner_node
install/turtle_project/share/turtle_project/: package.bash  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/srv/: CatchTurtle.srv
src/turtle_bringup/: CMakeLists.txt  package.xml
src/turtle_bringup/launch/: turtlecatcher.launch.py
src/turtle_project/: setup.py
src/turtle_project/turtle_project/: turtle_controller.py  turtle_spawner.py
(+92 files in other folders)
